Fix all spacings

--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -68,7 +68,7 @@ footer {
       .call-btns {
         button {
           .heading5 {
-            padding-left: 4px;
+            padding-left: 6px;
           }
 
           .heading3 {
