--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -95,6 +95,10 @@
       background: #ffffff60;
       border-radius: 16px;
       padding: 20px 4%;
+
+      .heading5 {
+        padding-left: 6px;
+      }
     }
   }
 }
