--- a/src/assets/styles/reviewsFaqs.scss
+++ b/src/assets/styles/reviewsFaqs.scss
@@ -5,8 +5,6 @@
 
   .heading5 {
     color: #FF7315;
-    letter-spacing: 2px;
-    font-weight: 500;
   }
 
   .review-card {
@@ -38,11 +36,7 @@
 
 // FAQS ----------------------------------------------------------------------------------------
 #faqs {
-
-  .heading5 {
-    letter-spacing: 2px;
-    font-weight: 500;
-  }
+  margin-top: 50px;
 
   .questions {
     max-width: 1200px;
